[update] add notification and fcm token
