# internal/models/user.go
@@ -6,6 +6,7 @@ type User struct {
 	IsActive   bool      `gorm:"default:false"`
 	Password   string    `gorm:"not null" json:"-"`
 	Role       Role      `gorm:"type:role;not null;default:warga" json:"role"`
+	PhotoUrl   *string   `gorm:"null" json:"photo_url"`
 	ResidentID *string   `gorm:"null" json:"resident_id"` // nullable
 	Resident   *Resident `gorm:"foreignKey:ResidentID" json:"resident,omitempty"`
 	UserRTs    UserRTs
