# internal/routes/user_fcm_token_routes.go
@@ -1,0 +1,13 @@
+package routes
+
+import (
+	"github.com/IKHINtech/sirnawa-backend/internal/handlers"
+	"github.com/IKHINtech/sirnawa-backend/internal/services"
+	"github.com/gofiber/fiber/v2"
+)
+
+func UserFcmTokenRoutes(route fiber.Router, tokenService *services.FCMTokenService) {
+	tokenHandler := handlers.NewFCMTokenHandler(tokenService)
+	route.Get("/register", tokenHandler.RegisterToken)
+	route.Get("/remove", tokenHandler.RemoveToken)
+}
